--- a/.env
+++ b/.env
@@ -15,3 +15,13 @@ KAFKA_DATA_DIR=/Users/chris/Code/PoC/kafka
 # environment variables for schema init and insert system and demo data
 ADD_SCHEMA_AND_SYSTEM_DATA=true
 ADD_DEMO_DATA=true
+
+# spark evnironment variables
+SPARK_JAR_DIR=/Users/chris/Code/PoC/spark
+
+# nifi environment variables
+NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/PoC/nifi/flowfile
+NIFI_DATABASE_REPO_DIR=/Users/chris/Code/PoC/nifi/db
+NIFI_CONTENT_REPO_DIR=/Users/chris/Code/PoC/nifi/content
+NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/PoC/nifi/provenance
+NIFI_LIB_DIR=/Users/chris/Code/PoC/nifi/lib
