--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ version: '2'
 
 services:
   tb:
-    image: "tempus/application:0.0.1"
+    build: "tb/"
     ports:
       - "8080:8080"
       - "1883:1883"
@@ -43,20 +43,22 @@ services:
     volumes:
       - "${POSTGRES_DATA_DIR}:/var/lib/postgresql/data"
   zk:
-    image: "tempus/zk:0.0.1"
+    build: "zookeeper/"
     ports:
       - "2181"
   nifi:
-    image: "tempus/nifi:0.0.1"
+    build: "nifi/"
     ports:
     - "9090:8080"
     - "9191:9191"
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - "${POSTGRES_DATA_DIR}:/var/lib/postgresql/data"
+      - "${NIFI_FLOWFILE_REPO_DIR}:/opt/nifi/nifi-1.3.0/flowfile_repository"
+      - "${NIFI_DATABASE_REPO_DIR}:/opt/nifi/nifi-1.3.0/database_repository"
+      - "${NIFI_CONTENT_REPO_DIR}:/opt/nifi/nifi-1.3.0/content_repository"
+      - "${NIFI_PROVENANCE_REPO_DIR}:/opt/nifi/nifi-1.3.0/provenance_repository"
+     # - "${NIFI_LIB_DIR}:/opt/nifi/nifi-1.3.0/lib"
   kafka:
-    image: "tempus/kafka:0.0.1"
+    build: "kafka/"
     ports:
       - "9092:9092"
     depends_on:
@@ -70,7 +72,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   spark-master:
-    image: "tempus/spark-2:latest"
+    build: "spark/"
     command: bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     hostname: spark-master
     environment:
@@ -97,8 +99,9 @@ services:
     volumes:
       - ./conf/spark-master:/conf
       - ./data:/tmp/data
+      - "${SPARK_JAR_DIR}:/usr/local/apps"
   spark-worker-1:
-    image: "tempus/spark-2:latest"
+    build: "spark/"
     command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     hostname: spark-worker-1
     environment:
