--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# host ip
+HOST_IP=10.0.0.159
+
 # cassandra environment variables
 CASSANDRA_DATA_DIR=/Users/chris/Code/PoC/cassandrat
 
@@ -24,4 +27,4 @@ NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/PoC/nifi/flowfile
 NIFI_DATABASE_REPO_DIR=/Users/chris/Code/PoC/nifi/db
 NIFI_CONTENT_REPO_DIR=/Users/chris/Code/PoC/nifi/content
 NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/PoC/nifi/provenance
-NIFI_LIB_DIR=/Users/chris/Code/PoC/nifi/lib
+NIFI_LOG_DIR=/Users/chris/Code/PoC/nifi/logs
