--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - "${NIFI_DATABASE_REPO_DIR}:/opt/nifi/nifi-1.3.0/database_repository"
       - "${NIFI_CONTENT_REPO_DIR}:/opt/nifi/nifi-1.3.0/content_repository"
       - "${NIFI_PROVENANCE_REPO_DIR}:/opt/nifi/nifi-1.3.0/provenance_repository"
-     # - "${NIFI_LIB_DIR}:/opt/nifi/nifi-1.3.0/lib"
+      - "${NIFI_LOG_DIR}:/opt/nifi/nifi-1.3.0/logs"
   kafka:
     build: "kafka/"
     ports:
@@ -67,13 +67,13 @@ services:
     links:
       - "zk"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 10.0.0.159
+      KAFKA_ADVERTISED_HOST_NAME: ${HOST_IP}
       KAFKA_ZOOKEEPER_CONNECT: zk:2181
       KAFKA_ZOOKEEPER_CONNECTION_TIMEOUT_MS: 16000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
   spark-master:
-    build: "spark/"
+    image: gettyimages/spark
     command: bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     hostname: spark-master
     environment:
@@ -90,40 +90,15 @@ services:
       - 7006
       - 7077
       - 6066
+      - 8181
     ports:
       - 4040:4040
       - 6066:6066
       - 7077:7077
-      - 8181:8181
+      - 8181:8080
     links:
       - kafka
     volumes:
-      - ./conf/spark-master:/conf
+      - ./conf/master:/conf
       - ./data:/tmp/data
       - "${SPARK_JAR_DIR}:/usr/local/apps"
-  spark-worker-1:
-    build: "spark/"
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
-    hostname: spark-worker-1
-    environment:
-      SPARK_CONF_DIR: /conf
-      SPARK_PUBLIC_DNS: 127.0.0.1
-      SPARK_WORKER_CORES: 2
-      SPARK_WORKER_MEMORY: 2g
-      SPARK_WORKER_PORT: 8881
-      SPARK_WORKER_WEBUI_PORT: 8081
-    links:
-      - spark-master
-      - kafka
-    expose:
-      - 7012
-      - 7013
-      - 7014
-      - 7015
-      - 7016
-      - 8881
-    ports:
-      - 8081:8081
-    volumes:
-      - ./conf/spark-worker-1:/conf
-      - ./data:/tmp/data
