Mapping of the simulator configs directory to be external

--- a/.env
+++ b/.env
@@ -28,3 +28,4 @@ NIFI_DATABASE_REPO_DIR=/Users/chris/Code/PoC/nifi/db
 NIFI_CONTENT_REPO_DIR=/Users/chris/Code/PoC/nifi/content
 NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/PoC/nifi/provenance
 NIFI_LOG_DIR=/Users/chris/Code/PoC/nifi/logs
+NIFI_CONFIGS_FILE=/Users/chris/Code/PoC/nifi/configs
