--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - "${NIFI_CONTENT_REPO_DIR}:/opt/nifi/nifi-1.3.0/content_repository"
       - "${NIFI_PROVENANCE_REPO_DIR}:/opt/nifi/nifi-1.3.0/provenance_repository"
       - "${NIFI_LOG_DIR}:/opt/nifi/nifi-1.3.0/logs"
+      - "${NIFI_CONFIGS_FILE}:/usr/local/configs"
   kafka:
     build: "kafka/"
     ports:
