--- a/nifi/Dockerfile
+++ b/nifi/Dockerfile
@@ -5,9 +5,9 @@ ENV NIFI_VERSION 1.3.0
 ENV NIFI_BASE_DIR /opt/nifi
 ENV NIFI_HOME $NIFI_BASE_DIR/nifi-$NIFI_VERSION
 
-RUN mkdir usr/local/configs
+RUN mkdir -p usr/local/simulator/configs
 
-ADD basicConfig.json /usr/local/configs
+ADD basicConfig.json /usr/local/simulator/configs
 
 ADD nifi-simulator-bundle-nar-1.0-SNAPSHOT.nar ${NIFI_HOME}/lib
 ADD flow.xml.gz ${NIFI_HOME}/conf
