adding tb-gateway environment variable to .env

--- a/.env
+++ b/.env
@@ -19,6 +19,10 @@ KAFKA_DATA_DIR=/Users/chris/Code/PoC/kafka
 ADD_SCHEMA_AND_SYSTEM_DATA=true
 ADD_DEMO_DATA=true
 
+# environment variables for tb-gateway
+GATEWAY_HOST=tb
+GATEWAY_ACCESS_TOKEN=your_access_token
+
 # spark evnironment variables
 SPARK_JAR_DIR=/Users/chris/Code/PoC/spark
 
