--- a/tb.env
+++ b/tb.env
@@ -23,3 +23,5 @@ POSTGRES_PORT=5432
 # SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/thingsboard
 # SPRING_DATASOURCE_USERNAME=postgres
 # SPRING_DATASOURCE_PASSWORD=postgres
+
+SPARK_COMPUTATIONS_PATH=/home
