Jetinder => Adding dokcer dependencies for LDAP authentication

--- a/.env
+++ b/.env
@@ -11,6 +11,9 @@ POSTGRES_DB=thingsboard
 # hsqldb environment variables
 HSQLDB_DATA_DIR=/Users/chris/Code/PoC/hsqldb
 
+# openldap environment variables
+OPENLDAP_DATA_DIR=/Users/chris/Code/PoC/openldap
+
 NIFI_DATA_DIR=/Users/chris/Code/PoC/nifi
 
 KAFKA_DATA_DIR=/Users/chris/Code/PoC/kafka
