Jetinder => Splitting the docker compose into two for optional LDAP authentication + Readme

--- a/tb.env
+++ b/tb.env
@@ -23,3 +23,7 @@ POSTGRES_PORT=5432
 # SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/thingsboard
 # SPRING_DATASOURCE_USERNAME=postgres
 # SPRING_DATASOURCE_PASSWORD=postgres
+
+#Enabling ldap authentication
+LDAP_AUTHENTICATION_ENABLED=false
+
