updating nifi dockerfile for changes in the base image

--- a/nifi/Dockerfile
+++ b/nifi/Dockerfile
@@ -5,13 +5,13 @@ ENV NIFI_VERSION 1.4.0
 ENV NIFI_BASE_DIR /opt/nifi
 ENV NIFI_HOME $NIFI_BASE_DIR/nifi-$NIFI_VERSION
 
-RUN mkdir usr/local/configs
+USER root
+RUN mkdir -p usr/local/configs
 
 ADD basicConfig.json /usr/local/configs
 
 ADD nifi-simulator-bundle-nar-1.0-SNAPSHOT.nar ${NIFI_HOME}/lib
 ADD flow.xml.gz ${NIFI_HOME}/conf
-USER root
 RUN chown -R nifi:nifi $NIFI_HOME
 USER nifi
 # Startup NiFi
