--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,4 @@
+#Nginx Configurations
 
 user  nginx;
 worker_processes  1;
@@ -6,13 +7,14 @@ events {
     worker_connections  1024;
 }
 
-
+# http configuration for nginx to thingsboard stream
 http {
     upstream tb {
         server tb:8080;
     }
 
     server {
+        # enable ssl support
         listen 443 ssl;
 
         ssl on;
@@ -34,7 +36,7 @@ http {
     }
 }
 
-# stream for MQTT
+# streams for mqtt, coap
 stream {
     upstream tb_mqtt {
         server tb:1883;
