--- a/tb.env
+++ b/tb.env
@@ -8,7 +8,7 @@ COAP_BIND_PORT=5683
 ZOOKEEPER_URL=zk:2181
 
 # type of database to use: sql[DEFAULT] or cassandra
-DATABASE_TYPE=sql
+DATABASE_TYPE=cassandra
 
 # cassandra db config
 CASSANDRA_URL=cassandra:9042
@@ -20,7 +20,7 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 # SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
 # SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
-# SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/thingsboard
+# SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/tempus
 # SPRING_DATASOURCE_USERNAME=postgres
 # SPRING_DATASOURCE_PASSWORD=postgres
 
