--- a/.env
+++ b/.env
@@ -1,30 +1,30 @@
 # host ip
-HOST_IP=10.30.30.43
+HOST_IP=10.30.30.14
 
 # cassandra environment variables
-CASSANDRA_DATA_DIR=/Users/chris/Code/data/cassandra
+CASSANDRA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/cassandra
 
 # postgres environment variables
-POSTGRES_DATA_DIR=/Users/chris/Code/data/postgres
+POSTGRES_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/postgres
 POSTGRES_DB=thingsboard
 
 # hsqldb environment variables
-HSQLDB_DATA_DIR=/Users/chris/Code/data/hsqldb
+HSQLDB_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/hsqldb
 
-NIFI_DATA_DIR=/Users/chris/Code/data/nifi
+NIFI_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi
 
-KAFKA_DATA_DIR=/Users/chris/Code/data/kafka
+KAFKA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/kafka
 
 # environment variables for schema init and insert system and demo data
 ADD_SCHEMA_AND_SYSTEM_DATA=true
-ADD_DEMO_DATA=true
+ADD_DEMO_DATA=false
 
 # spark evnironment variables
-SPARK_JAR_DIR=/Users/chris/Code/data/spark
+SPARK_JAR_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/spark
 
 # nifi environment variables
-NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/data/nifi/flowfile
-NIFI_DATABASE_REPO_DIR=/Users/chris/Code/data/nifi/db
-NIFI_CONTENT_REPO_DIR=/Users/chris/Code/data/nifi/content
-NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/data/nifi/provenance
-NIFI_LOG_DIR=/Users/chris/Code/data/nifi/logs
+NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/flowfile
+NIFI_DATABASE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/db
+NIFI_CONTENT_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/content
+NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/provenance
+NIFI_LOG_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/logs
