Switched advertised ip to hostname

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# host ip
-HOST_IP=10.30.30.14
+# advertised host name
+KAFKA_ADVERTISED_HOST_NAME=kafka
 
 # cassandra environment variables
 CASSANDRA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/cassandra
