Updating the dev environment to build the simulator locally. Additionally the flow has been updated for the latest tempus demo set

--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@ KAFKA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/kafka
 
 # environment variables for schema init and insert system and demo data
 ADD_SCHEMA_AND_SYSTEM_DATA=true
-ADD_DEMO_DATA=false
+OPENLDAP_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/ldap
+ADD_DEMO_DATA=true
 
 # spark evnironment variables
 SPARK_JAR_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/spark
