build and add Opc bundle

--- a/nifi/Dockerfile
+++ b/nifi/Dockerfile
@@ -10,6 +10,7 @@ USER root
 RUN mkdir -p usr/local/configs
 ADD basicConfig.json waterTank1.json waterTank2.json /usr/local/configs/
 ADD nifi-simulator-bundle-nar-1.0-SNAPSHOT.nar ${NIFI_HOME}/lib
+ADD nifi-opcua-bundle-nar-0.0.1-SNAPSHOT.nar ${NIFI_HOME}/lib
 ADD flow.xml.gz ${NIFI_HOME}/conf
 
 RUN chown nifi:nifi /usr/local/configs ${NIFI_HOME}/lib/nifi-simulator-bundle-nar-1.0-SNAPSHOT.nar ${NIFI_HOME}/conf/flow.xml.gz
