--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -2,7 +2,7 @@ FROM wurstmeister/base
 
 MAINTAINER Wurstmeister
 
-ENV ZOOKEEPER_VERSION 3.4.9
+ENV ZOOKEEPER_VERSION 3.4.10
 
 #Download Zookeeper
 RUN wget -q http://mirror.vorboss.net/apache/zookeeper/zookeeper-${ZOOKEEPER_VERSION}/zookeeper-${ZOOKEEPER_VERSION}.tar.gz && \
@@ -25,11 +25,11 @@ ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
 ENV ZK_HOME /opt/zookeeper-${ZOOKEEPER_VERSION}
 RUN sed  -i "s|/tmp/zookeeper|$ZK_HOME/data|g" $ZK_HOME/conf/zoo.cfg; mkdir $ZK_HOME/data
 
-ADD start-zk.sh /usr/bin/start-zk.sh 
+ADD start-zk.sh /usr/bin/start-zk.sh
 ADD zookeeper-ready.sh /usr/bin/zookeeper-ready.sh
 RUN chmod a+x /usr/bin/zookeeper-ready.sh
 EXPOSE 2181 2888 3888
 
 VOLUME ["/opt/zookeeper-${ZOOKEEPER_VERSION}/conf", "/opt/zookeeper-${ZOOKEEPER_VERSION}/data"]
 HEALTHCHECK CMD bash ./usr/bin/zookeeper-ready.sh 2181
-CMD /usr/sbin/sshd && bash /usr/bin/start-zk.sh
+CMD ./usr/bin/start-zk.sh
