--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-# host ip
-HOST_IP=10.0.0.8
+# advertised host name
+KAFKA_ADVERTISED_HOST_NAME=kafka
 
 # cassandra environment variables
-CASSANDRA_DATA_DIR=/Users/chris/Code/PoC/cassandrat
+CASSANDRA_DATA_DIR=/Users/miteshrathore/tempus/data/cassandra
 
 # postgres environment variables
-POSTGRES_DATA_DIR=/Users/chris/Code/PoC/postgres
+POSTGRES_DATA_DIR=/Users/miteshrathore/tempus/data/postgres
 POSTGRES_DB=thingsboard
 
 # hsqldb environment variables
-HSQLDB_DATA_DIR=/Users/chris/Code/PoC/hsqldb
+HSQLDB_DATA_DIR=/Users/miteshrathore/tempus/data/hsqldb
 
-NIFI_DATA_DIR=/Users/chris/Code/PoC/nifi
+NIFI_DATA_DIR=/Users/miteshrathore/tempus/data/nifi
 
-KAFKA_DATA_DIR=/Users/chris/Code/PoC/kafka
+KAFKA_DATA_DIR=/Users/miteshrathore/tempus/data/kafka
 
 # environment variables for schema init and insert system and demo data
 ADD_SCHEMA_AND_SYSTEM_DATA=true
@@ -21,14 +21,14 @@ ADD_DEMO_DATA=true
 
 # environment variables for tb-gateway
 GATEWAY_HOST=tb
-GATEWAY_ACCESS_TOKEN=your_access_token
+GATEWAY_ACCESS_TOKEN=gatewaytoken
 
 # spark evnironment variables
-SPARK_JAR_DIR=/Users/chris/Code/PoC/spark
+SPARK_JAR_DIR=/Users/miteshrathore/tempus/data/spark
 
 # nifi environment variables
-NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/PoC/nifi/flowfile
-NIFI_DATABASE_REPO_DIR=/Users/chris/Code/PoC/nifi/db
-NIFI_CONTENT_REPO_DIR=/Users/chris/Code/PoC/nifi/content
-NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/PoC/nifi/provenance
-NIFI_LOG_DIR=/Users/chris/Code/PoC/nifi/logs
+NIFI_FLOWFILE_REPO_DIR=/Users/miteshrathore/tempus/data/nifi/flowfile
+NIFI_DATABASE_REPO_DIR=/Users/miteshrathore/tempus/data/nifi/db
+NIFI_CONTENT_REPO_DIR=/Users/miteshrathore/tempus/data/nifi/content
+NIFI_PROVENANCE_REPO_DIR=/Users/miteshrathore/tempus/data/nifi/provenance
+NIFI_LOG_DIR=/Users/miteshrathore/tempus/data/nifi/logs
