--- a/tb.env
+++ b/tb.env
@@ -8,7 +8,7 @@ COAP_BIND_PORT=5683
 ZOOKEEPER_URL=zk:2181
 
 # type of database to use: sql[DEFAULT] or cassandra
-DATABASE_TYPE=sql
+DATABASE_TYPE=cassandra
 
 # cassandra db config
 CASSANDRA_URL=cassandra:9042
