changing the database to tempus from thingsboard for postgres

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ CASSANDRA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/cassandra
 
 # postgres environment variables
 POSTGRES_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/postgres
-POSTGRES_DB=thingsboard
+POSTGRES_DB=tempus
 
 # hsqldb environment variables
 HSQLDB_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/hsqldb
