adding identity and api discovery in tempus dev environment docker setup

--- a/.env
+++ b/.env
@@ -2,30 +2,34 @@
 KAFKA_ADVERTISED_HOST_NAME=kafka
 
 # cassandra environment variables
-CASSANDRA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/cassandra
+CASSANDRA_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/cassandra
 
 # postgres environment variables
-POSTGRES_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/postgres
+POSTGRES_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/postgres
 POSTGRES_DB=tempus
 
 # hsqldb environment variables
-HSQLDB_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/hsqldb
+HSQLDB_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/hsqldb
 
-NIFI_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi
+NIFI_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi
 
-KAFKA_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/kafka
+KAFKA_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/kafka
 
 # environment variables for schema init and insert system and demo data
 ADD_SCHEMA_AND_SYSTEM_DATA=true
-OPENLDAP_DATA_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/ldap
+OPENLDAP_DATA_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/ldap
 ADD_DEMO_DATA=true
 
 # spark evnironment variables
-SPARK_JAR_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/spark
+SPARK_JAR_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/spark
 
 # nifi environment variables
-NIFI_FLOWFILE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/flowfile
-NIFI_DATABASE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/db
-NIFI_CONTENT_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/content
-NIFI_PROVENANCE_REPO_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/provenance
-NIFI_LOG_DIR=/Users/chris/Code/hashmap/Tempus/dev_env/data/nifi/logs
+NIFI_FLOWFILE_REPO_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi/flowfile
+NIFI_DATABASE_REPO_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi/db
+NIFI_CONTENT_REPO_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi/content
+NIFI_PROVENANCE_REPO_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi/provenance
+NIFI_LOG_DIR=/Users/anuj/Projects/TempusCloud/dev_env/data/nifi/logs
+
+# eureka server config
+EUREKA_SERVER_HOST=api-discovery
+EUREKA_SERVER_PORT=8761
