--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,30 @@ services:
     environment:
       - ADD_SCHEMA_AND_SYSTEM_DATA=${ADD_SCHEMA_AND_SYSTEM_DATA}
       - ADD_DEMO_DATA=${ADD_DEMO_DATA}
+      - ACCESS_TOKEN_URI=http://identity-service:9002/uaa/oauth/token
+      - AUTHORIZATION_URI=http://identity-service:9002/uaa/oauth/authorize
+      - TOKEN_INFO_URI=http://identity-service:9002/uaa/oauth/check_token
     links:
+      - postgres
       - zk
       - kafka
     entrypoint: /run-application.sh
+  api-discovery:
+    build: "api-discovery/"
+    ports:
+      - "8761:8761"
+  identity-service:
+    build: "identity-service/"
+    ports:
+      - "9002:9002"
+    env_file:
+      - identity-service/identity-service.env
+    environment:
+      - EUREKA_SERVER_HOST=${EUREKA_SERVER_HOST}
+      - EUREKA_SERVER_PORT=${EUREKA_SERVER_PORT}
+    links:
+      - postgres
+      - api-discovery
   cassandra:
     image: "cassandra:3.9"
     hostname: cassandra
