--- a/tb.env
+++ b/tb.env
@@ -18,11 +18,11 @@ CASSANDRA_PORT=9042
 # postgres db config
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-# SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
-# SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
-# SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/thingsboard
-# SPRING_DATASOURCE_USERNAME=postgres
-# SPRING_DATASOURCE_PASSWORD=postgres
+SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
+SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
+SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/tempus
+SPRING_DATASOURCE_USERNAME=postgres
+SPRING_DATASOURCE_PASSWORD=postgres
 
 #Enabling ldap authentication
 LDAP_AUTHENTICATION_ENABLED=false
