--- a/tb.env
+++ b/tb.env
@@ -28,3 +28,8 @@ SPRING_DATASOURCE_PASSWORD=postgres
 LDAP_AUTHENTICATION_ENABLED=false
 
 SPARK_COMPUTATIONS_PATH=/tmp
+
+#Identity Service config
+ACCESS_TOKEN_URI=http://identity-service:9002/uaa/oauth/token
+AUTHORIZATION_URI=http://identity-service:9002/uaa/oauth/authorize
+TOKEN_INFO_URI=http://identity-service:9002/uaa/oauth/check_token
