Add metadata-api in docker dev environment

--- a/tb.env
+++ b/tb.env
@@ -31,3 +31,6 @@ SPARK_COMPUTATIONS_PATH=/tmp
 
 #Identity Service config
 IDENTITY_BASE_URL=http://identity-service:9002/uaa
+
+#metadata-api config
+METADATA_BASE_URL=http://metadata-api:9003/api
