--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,14 @@ services:
     links:
       - postgres
       - api-discovery
+  metadata-api:
+    build: "metadata-api/"
+    ports:
+      - "9003:9003"
+    env_file:
+      - metadata-api/metadata-api.env
+    links:
+      - postgres
   cassandra:
     image: "cassandra:3.9"
     hostname: cassandra
@@ -61,7 +69,7 @@ services:
   postgres:
     image: "postgres:9.6"
     ports:
-    - "5432"
+    - "5432:5432"
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
