--- a/metadata-api/metadata-api.env
+++ b/metadata-api/metadata-api.env
@@ -4,3 +4,6 @@ POSTGRES_PORT=5432
 SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
 SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
 SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/tempus
+
+#Identity Service config
+IDENTITY_BASE_URL=http://identity-service:9002/uaa
