Added kafka and kinesis related env variables.

--- a/data-quality/data-quality.env
+++ b/data-quality/data-quality.env
@@ -1,3 +1,21 @@
 TEMPUS_URL=http://tb:8080
-TEMPUS_MQTT_URL=0.0.0.0:1883
+
+#Mqtt settings
+TEMPUS_MQTT_BIND_ADDRESS=tb
+TEMPUS_MQTT_BIND_PORT=1883
+
 IDENTITY_BASE_URL=http://identity-service:9002/uaa
+
+#Kafka settings
+KAFKA_BIND_ADDRESS=kafka
+KAFKA_BIND_PORT=9092
+DATA_QUALITY_TOPIC=data-quality-topic
+
+FREQUENCY_QUALITY_THRESHOLD=10
+
+#kinesis settings
+KINESIS_SUPPORT_ENABLED=true
+STREAM_NAME=stream
+SHARD_ID=shardId
+AWS_ACCESS_KEY=aws_access_key
+AWS_SECRET_KEY=asw_secret_key
